# opendata-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: async_usage.py  basic_usage.py  getting_started.ipynb  pandas_workflow.py  query_builder.py
src/opendata_sdk/: __init__.py  _config.py  _exceptions.py  _pagination.py  _query.py  _result.py  _sql.py  _transport.py  _types.py  client.py
src/opendata_sdk/_resources/: __init__.py  _base.py  categories.py  datasets.py  providers.py  search.py  sql.py
src/opendata_sdk/aio/: __init__.py  client.py
tests/: conftest.py  test_async_client.py  test_async_sql.py  test_client.py  test_datasets.py  test_pagination.py  test_query.py  test_result.py  test_schema_drift.py  test_search.py  test_sql_parsing.py  test_sql_resource.py  test_transport.py  test_types.py
