[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tryopendata"
version = "0.1.0"
description = "Python SDK for the OpenData API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Riley Hilliard", email = "akuztikbeatz@gmail.com" }]
keywords = ["opendata", "datasets", "api", "data", "open-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://tryopendata.ai"
Repository = "https://github.com/tryopendata/opendata-python"
Documentation = "https://tryopendata.ai/docs"

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
polars = ["polars>=0.20"]
all = ["pandas>=1.5", "polars>=0.20"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "mypy>=1.10",
    "ruff>=0.5",
    "pandas>=2.0",
    "polars>=0.20",
    "pandas-stubs>=2.3.3.260113",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opendata_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
